# Discregrid

./: CMakeLists.txt
cmake/: DiscregridConfig.cmake.in
cmd/discrete_field_to_bitmap/: main.cpp
cmd/generate_density_map/: gauss_quadrature.cpp  gauss_quadrature.hpp  main.cpp  sph_kernel.hpp
cmd/generate_sdf/: main.cpp
discregrid/: CMakeLists.txt
discregrid/include/Discregrid/: common.hpp  cubic_lagrange_discrete_grid.hpp  discrete_grid.hpp
discregrid/include/Discregrid/acceleration/: bounding_sphere.hpp  bounding_sphere_hierarchy.hpp  kd_tree.hpp  kd_tree.inl
discregrid/include/Discregrid/geometry/: mesh_distance.hpp
discregrid/include/Discregrid/mesh/: entity_iterators.hpp  triangle_mesh.hpp
discregrid/src/: cubic_lagrange_discrete_grid.cpp  discrete_grid.cpp
discregrid/src/acceleration/: bounding_sphere_hierarchy.cpp
discregrid/src/geometry/: mesh_distance.cpp  point_triangle_distance.cpp  point_triangle_distance.hpp
discregrid/src/mesh/: triangle_mesh.cpp
discregrid/src/utility/: timing.hpp
